# RoDeO

./: improvement.md
controller/draco_controller/: CMakeLists.txt  package.xml
controller/draco_controller/config/: draco_joint_pd.yaml  draco_wbc.yaml  state_machine.yaml  task_list.yaml
controller/draco_controller/src/state_machines/: balance.cpp  initialize.cpp
controller/draco_controller/test/: test_draco_controller_unit.cpp
controller/optimo_controller/: CMakeLists.txt  gain_tuning.md  optimo_controller_plugin.xml  package.xml
controller/optimo_controller/config/: joint_pid_gains.yaml  mujoco_pid.yaml  optimo_wbc.yaml  qp_params.yaml  residual_dynamics.yaml  state_machine.yaml  task_list.yaml
controller/optimo_controller/doc/: gain_sweep.csv
controller/optimo_controller/include/optimo_controller/: manipulability_handler.hpp  optimo_controller.hpp  optimo_controller_wbc.hpp  optimo_state_provider.hpp  optimo_wbc_controller.hpp  workspace_hull.hpp
controller/optimo_controller/scripts/: compute_workspace.py
controller/optimo_controller/src/: gain_sweep_node.cpp  manipulability_handler.cpp  optimo_controller.cpp  optimo_controller_wbc.cpp  optimo_state_provider.cpp  optimo_wbc_controller.cpp
controller/optimo_controller/src/state_machines/: cartesian_teleop.cpp  ee_teleop.cpp  initialize.cpp  (+2 more)
controller/optimo_controller/test/: test_domain_randomization.cpp  test_dummy_teleop.cpp  test_gain_tuning.cpp  test_optimo_controller_service.cpp  test_optimo_controller_unit.cpp  test_ros2_integration.py  test_sea.cpp
description/optimo_description/: CMakeLists.txt  package.xml
description/optimo_description/config/: joint_dynamics.md  joint_dynamics.yaml  mujoco_pid_gains.yaml
description/optimo_description/launch/: view_optimo.launch.py
description/optimo_description/mjcf/: mjmodel.xml  optimo.xml
description/optimo_description/rviz/: optimo.rviz
description/optimo_description/scripts/: generate_urdf.py
description/optimo_description/urdf/: optimo.urdf  optimo.urdf.xacro
description/simple_humanoid_description/: CMakeLists.txt  package.xml
description/simple_humanoid_description/launch/: view_simple_humanoid.launch.py
description/simple_humanoid_description/meshes/: box.stl
description/simple_humanoid_description/urdf/: simple_humanoid.urdf
hardware_interface/optimo_hardware_interface/: CMakeLists.txt  optimo_hardware_interface.xml  package.xml
hardware_interface/optimo_hardware_interface/src/: optimo_hardware_interface.cpp
hardware_interface/spacemouse_interface/: package.xml  setup.cfg  setup.py
hardware_interface/spacemouse_interface/config/: spacemouse_interface.yaml
hardware_interface/spacemouse_interface/launch/: spacemouse_interface.launch.py
hardware_interface/spacemouse_interface/resource/: spacemouse_interface
hardware_interface/spacemouse_interface/spacemouse_interface/: __init__.py  spacemouse_hardware.py  spacemouse_twist.py
residual_compensator/: CMakeLists.txt  package.xml
residual_compensator/include/residual_compensator/: adaptive_friction_compensator.hpp  momentum_observer.hpp  sysid.hpp
residual_compensator/src/: adaptive_friction_compensator.cpp  momentum_observer.cpp  sysid.cpp
residual_compensator/test/: test_sysid.cpp
robot_bringup/optimo_bringup/: CMakeLists.txt  package.xml
robot_bringup/optimo_bringup/config/: optimo_controller.yaml
robot_bringup/optimo_bringup/launch/: optimo_wbc.launch.py  optimo_wbc_mujoco.launch.py
robot_bringup/optimo_bringup/scripts/: keyboard_teleop.py
simulation/mujoco_sim/: CMakeLists.txt  package.xml
simulation/mujoco_sim/launch/: mujoco_sim.launch.py
simulation/mujoco_sim/test/: test_optimo_wbc_mujoco.py
wbc_core/rpc_example/: CMakeLists.txt  package.xml
wbc_core/rpc_example/config/: example_wbic.yaml  example_wbic_draco_floating.yaml  qp_param.yaml
wbc_core/rpc_example/launch/: example_controller_rbd_sim.launch.py  example_controller_wbc_contact_sim.launch.py
wbc_core/rpc_example/scripts/: pinocchio_draco3_contact_demo.py  pinocchio_rbd_visualization.py
wbc_core/rpc_example/src/: ExampleController.cpp  example_controller_rbd_sim.cpp  example_controller_wbc_contact_sim.cpp  example_state_provider.cpp
wbc_core/rpc_example/test/: test_example_state_provider.cpp
wbc_core/wbc_architecture/: CMakeLists.txt  package.xml
wbc_core/wbc_architecture/src/: config_compiler.cpp  control_architecture.cpp  runtime_config.cpp  task_weight_scheduler.cpp  wbc_compiled_config.cpp
wbc_core/wbc_architecture/test/: test_cascade_pid.cpp  test_control_architecture_behavior.cpp  test_real_tasks.cpp  test_review_improvements.cpp  test_wbc_config_compiler.cpp  test_yaml_to_wbic_dataflow.cpp
wbc_core/wbc_formulation/: CMakeLists.txt  package.xml
wbc_core/wbc_formulation/src/: constraint.cpp  contact_constraint.cpp  force_task.cpp  kinematic_constraint.cpp  motion_task.cpp
wbc_core/wbc_fsm/: CMakeLists.txt  package.xml
wbc_core/wbc_fsm/src/: state_factory.cpp
wbc_core/wbc_handlers/: CMakeLists.txt  package.xml
wbc_core/wbc_handlers/src/: manipulability_handler.cpp  sys_id_handler.cpp
wbc_core/wbc_handlers/test/: test_joint_teleop_handler.cpp
wbc_core/wbc_logger/: CMakeLists.txt  package.xml
wbc_core/wbc_logger/src/: wbc_logger.cpp
wbc_core/wbc_solver/: CMakeLists.txt  package.xml
wbc_core/wbc_solver/src/: wbic.cpp
wbc_core/wbc_trajectory/: CMakeLists.txt  package.xml
wbc_core/wbc_trajectory/src/: interpolation.cpp  joint_integrator.cpp  math_util.cpp
wbc_core/wbc_trajectory/test/: test_joint_teleop_handler.cpp
wbc_core/wbc_util/: CMakeLists.txt  package.xml
wbc_core/wbc_util/src/: constraint_registry.cpp  io_util.cpp  ros_path_utils.cpp  task_registry.cpp  yaml_parser.cpp
wbc_ros/wbc_msgs/: CMakeLists.txt  package.xml
wbc_ros/wbc_msgs/msg/: ContactStatus.msg  ForceTaskCommand.msg  MotionTaskCommand.msg  TaskState.msg  WbcCommand.msg  WbcState.msg  WbcTeleopCmd.msg
wbc_ros/wbc_msgs/srv/: ConfigureContact.srv  ConfigureTask.srv  ListTasks.srv  ResidualDynamicsService.srv  TaskGainService.srv  TaskWeightService.srv  TransitionState.srv
(+120 files in other folders)
