<?xml version="1.0"?>
<package format="3">
  <name>optimo_hardware_interface</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface plugin for Optimo robot.</description>

  <maintainer email="dk@todo.todo">dk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/optimo_hardware_interface.xml"/>
  </export>
</package>
