<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_sim</name>
  <version>0.0.1</version>
  <description>MuJoCo simulation package for RPC robots.</description>

  <maintainer email="user@example.com">WBC Developers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mujoco_ros2_control</exec_depend>
  <exec_depend>optimo_bringup</exec_depend>
  <exec_depend>optimo_description</exec_depend>

  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>wbc_msgs</test_depend>
  <test_depend>optimo_controller</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
