<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpc_example</name>
  <version>0.1.0</version>
  <description>Example wrapper controller package for WBC architecture.</description>

  <maintainer email="user@example.com">WBC Developers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>ament_index_cpp</depend>
  <depend>pinocchio</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>wbc_architecture</depend>
  <depend>wbc_fsm</depend>
  <depend>wbc_formulation</depend>
  <depend>wbc_robot_system</depend>
  <depend>wbc_trajectory</depend>
  <depend>wbc_util</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>optimo_description</exec_depend>
  <exec_depend>draco_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
