<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wbc_architecture</name>
  <version>0.1.0</version>
  <description>
    WBC parser/assembly package (YAML wiring into runtime registries/recipes).
  </description>

  <maintainer email="user@example.com">WBC Developers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>yaml-cpp</depend>
  <depend>wbc_formulation</depend>
  <depend>wbc_fsm</depend>
  <depend>wbc_robot_system</depend>
  <depend>wbc_solver</depend>
  <depend>wbc_util</depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
