<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wbc_logger</name>
  <version>0.1.0</version>
  <description>WBC periodic console logger for debugging</description>
  <maintainer email="dk@todo.com">dk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>wbc_formulation</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
